objects/ssot__PatientMedicationRequest__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AllowedSubstitutionTypeCodeId__c</fullName>
        <label>AllowedSubstitutionTypeCode</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CanSubstitute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Substitute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__CarePlanId__c</fullName>
        <label>Care Plan</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalEncounterId__c</fullName>
        <label>Clinical Encounter</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestId__c</fullName>
        <label>Clinical Service Request</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenseIntervalNumber__c</fullName>
        <label>Dispense Interval</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DispenseIntervalUOMId__c</fullName>
        <label>Dispense Interval Unit of Measure</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DispenserId__c</fullName>
        <label>Dispenser</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FillDurationUOMId__c</fullName>
        <label>Fill Duration UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FillQuantityUOMId__c</fullName>
        <label>Fill Quantity UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HealthcarePerformerId__c</fullName>
        <label>Healthcare Performer</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Patient Medication Request Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndividualId__c</fullName>
        <label>Individual Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InitialFillDurationNumber__c</fullName>
        <label>Initial Fill Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InitialFillQuantity__c</fullName>
        <label>Initial Fill Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsIgnored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Ignored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSecondaryInformation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Secondary Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationAdministrationContextText__c</fullName>
        <label>Medication Administration Context</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationCodeId__c</fullName>
        <label>Medication Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationId__c</fullName>
        <label>Medication</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MedicationRequestType__c</fullName>
        <label>Medication Request Type</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientId__c</fullName>
        <label>Patient</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PatientMedicationStatementId__c</fullName>
        <label>Patient Medication Statement</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerId__c</fullName>
        <label>Performer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerObject__c</fullName>
        <label>Performer Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PerformerTypeId__c</fullName>
        <label>Performer Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrescribedDate__c</fullName>
        <label>Prescribed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionPeriodEnd__c</fullName>
        <label>Prescription Period End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionPeriodStart__c</fullName>
        <label>Prescription Period Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionPriority__c</fullName>
        <label>Prescription Priority</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrescriptionStatus__c</fullName>
        <label>Prescription Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreviousPatientMedicationRequestId__c</fullName>
        <label>Previous Patient Medication Request</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonCodeId__c</fullName>
        <label>Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonReferenceId__c</fullName>
        <label>Reason Reference</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ReasonReferenceObject__c</fullName>
        <label>Reason Reference Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RefillDurationNumber__c</fullName>
        <label>Refill Duration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RefillQuantity__c</fullName>
        <label>Refill Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RefillsAllowedQuantity__c</fullName>
        <label>Refills Allowed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPatientMedicationRequestId__c</fullName>
        <label>Related Patient Medication Request</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequesterId__c</fullName>
        <label>Requester</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RequesterObject__c</fullName>
        <label>Requester Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryInformationSourceId__c</fullName>
        <label>Secondary Information Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SecondaryInformationSourceObject__c</fullName>
        <label>Secondary Information Source Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StatusReasonCodeId__c</fullName>
        <label>Status Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubstitutionReasonCodeId__c</fullName>
        <label>Substitution Reason Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TherapyDurationUOM__c</fullName>
        <label>Therapy Duration Unit</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716724960958_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationRequest_ReasonCodeI_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>PatientMedicationRequest_ReasonCodeI_rel</relationshipLabel>
        <relationshipName>rel_1716724960958_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716724962867_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationRequest_ReasonRefer_rel</label>
        <referenceTo>ssot__PatientHealthCondition__dlm</referenceTo>
        <relationshipLabel>PatientMedicationRequest_ReasonRefer_rel</relationshipLabel>
        <relationshipName>rel_1716724962867_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716724964984_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PatientMedicationRequest_RelatedPati_rel</label>
        <referenceTo>ssot__PatientMedicationRequest__dlm</referenceTo>
        <relationshipLabel>PatientMedicationRequest_RelatedPati_rel</relationshipLabel>
        <relationshipName>rel_1716724964984_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>